<resources>
    <string name="crash_toast_text">Crash Report Send</string>
    <string name="ble_not_supported">is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_write">Write:</string>
    <string name="label_send">Send</string>
    <string name="label_Hercules_address">Standing-Egg Band address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_Herculess">Band Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_Hercules">Unknown Band</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="menu">menu</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="led">LED</string>
    <string name="main_menu_home">&#160;&#160;Home</string>
    <string name="main_menu_profile">&#160;&#160;Profile</string>
    <string name="main_menu_settings">&#160;&#160;Setting</string>
    <string name="main_menu_arlam">&#160;&#160;Alarm</string>
    <string name="main_menu_support">&#160;&#160;Support</string>
    <string name="main_menu_logout">Logout</string>
    <string name="main_menu_battery">&#160;&#160;Battery</string>
    <string name="terms">terms</string>
    <string name="mr">&#160;</string>
    <string name="thur">tuesday</string>
    <string name="login">login</string>
    <string name="join_app">create Band Account</string>
    <string name="pw_hint">Password</string>
    <string name="pw_hint_2">re-write your password</string>
    <string name="pw_enter">enter your password</string>
    <string name="pw_check_hint">re-write your password</string>
    <string name="pw_check_enter">enter your re-write password</string>
    <string name="id_hint">ID</string>
    <string name="id_enter">enter your id</string>
    <string name="name_hint">NAME</string>
    <string name="name_enter">enter your name</string>
    <string name="create_account">Create Account</string>
    <string name="bar">|</string>
    <string name="forgot_pw">Forgot Password</string>
    <string name="start">start</string>
    <string name="save">save</string>
    <string name="save_login">autoLogin</string>
    <string name="before">Previous</string>
    <string name="next">NEXT</string>
    <string name="create">create Account</string>
    <string name="gender_fe">FEMALE</string>
    <string name="gender_ma">MALE</string>
    <string name="gender">GENDER | </string>
    <string name="tall">HEIGHT | </string>
    <string name="weight_bar">WEIGHT | </string>
    <string name="terms_txt">&#160;of Band</string>
    <string name="terms_agree">I agree to Terms of Band</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_agree">I agree to Privacy policy of Band</string>
    <string name="activity_goal">Move goal</string>
    <string name="activity_goal_edt">Move goal Modify</string>
    <string name="sleep_goal">Sleep goal</string>
    <string name="sleep_goal_h">Sleep goal Hour</string>
    <string name="sleep_goal_m">Sleep goal Min</string>
    <string name="device_connect1">No connected Band.</string>
    <string name="device_connect2">Please register your Band to start.</string>
    <string name="device_connect_t">Band connect setting</string>
    <string name="device_connect_t_ok">registration complete</string>
    <string name="device_connect_q">Do you want to register your Band?</string>
    <string name="device_connect_f">Keep your Band as close as possible from your mobile</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="account_create">Create Account</string>
    <string name="test1">PROPERTY READ</string>
    <string name="test2">PROPERTY NOTI</string>
    <string name="today">Today</string>
    <string name="cancel">cancel</string>
    <string name="login_null_chk">Check your ID, Password</string>
    <string name="login_db_error_msg">DB error</string>
    <string name="login_device_address_msg">Band address is not correct.</string>
    <string name="login_invalid_device_msg">Invalid Band</string>
    <string name="login_pw_confirm_msg">Invalid user name or password is incorrect</string>
    <string name="login_member_policy">Terms and Privacy policy</string>
    <string name="login_member_agr">Terms  \n\n\n\n\n\n Privacy policy</string>
    <string name="login_member_policy_chk">you must agree to Terms and Privacy policy of Band.</string>
    <string name="login_arlam">Alert</string>
    <string name="forgot_value_chk">please enter correct value.</string>
    <string name="forgot_400_error">Provided information is not correct</string>
    <string name="forgot_460_error">User information does not exist</string>
    <string name="join_ok">Account registration complete</string>
    <string name="change_ok">change complete</string>
    <string name="find_txt">Please enter your account information and</string>
    <string name="find_txt2">ID to reset your password.</string>
    <string name="pw_change">change password</string>
    <string name="new_pw_check">re-write your new password</string>
    <string name="new_pw">New password</string>
    <string name="connecting">loading...</string>
    <string name="wrong_login">Invalid sign in information</string>
    <string name="logout">logout</string>
    <string name="agree1">you must agree to Terms and Privacy policy.</string>
    <string name="id_duplicate">ID duplicate</string>
    <string name="id_none">User information does not exist</string>
    <string name="address_duplicate">Band Duplicate</string>
    <string name="invaild_value">Invalid data format</string>
    <string name="invalid_data_value">BIRTH DATE format error</string>
    <string name="device_address_invaild">BAND invaild</string>
    <string name="server_error">server error</string>
    <string name="space_step"> steps</string>
    <string name="validate_eng_length_msg">(more than 3 characters including English characters)</string>
    <string name="space_hour_space">&#160;h &#160;&#160;</string>
    <string name="space_minutes">&#160;m</string>
    <string name="name_modify">NAME modify</string>
    <string name="tall_modify">HEIGHT modify</string>
    <string name="weight_modify">WEIGHT modify</string>
    <string name="sleep_goal_modify">sleep goal modify</string>
    <string name="bluetooth_fail">Failed to connect Bluetooth. \nDo you want to see the saved data without connecting to the band?</string>
    <string name="bluetooth_discon">Bluetooth connection has been lost. \nPlease restart the app.</string>
    <string name="logout_">Are you sure to sign out? \nToday’s data will be lost.</string>
    <string name="exam_txt">You achieved today’s move goal!</string>
    <string name="exam_txt2">102 calories burned</string>
    <string name="all_distance">Total km</string>
    <string name="title_activity">Activity</string>
	<string name="active_mass">Activity</string>
    <string name="active_mass_avg">Avg. Activity</string>
    <string name="walking">Walk</string>
    <string name="walking_avg">Avg. Walk</string>
    <string name="running">Run</string>
    <string name="running_avg">Avg. Run</string>
    <string name="all">Total</string>
    <string name="title_sleep">Sleep</string>
    <string name="sleep_h">Actual Sleep</string>
    <string name="sleep_deep">Deep Sleep</string>
    <string name="sleep_deep2">Deep Sleep</string>
    <string name="sleep_low">Light Sleep</string>
    <string name="sleep_start">Slept At</string>
    <string name="sleep_wakeup">Woke Up At</string>
    <string name="sleep_waking">Sleep Interruption</string>
    <string name="sleep_avg">Avg. Sleep</string>
    <string name="sleep_deep_avg">Avg. Deep Sleep</string>
    <string name="sleep_light_avg">Avg. light sleep</string>
    <string name="exam_txt3">0h00m</string>
    <string name="activity_avg">Avg. Steps</string>
    <string name="activity_walk">steps</string>
    <string name="use_count">Total days</string>
    <string name="birth">Birth date</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="unit">unit set</string>
    <string name="cm">cm</string>
    <string name="feet">feet</string>
    <string name="kg">kg</string>
    <string name="lbs">lbs</string>
    <string name="battery">Remaining battery &#160;</string>
    <string name="battery2"></string>
    <string name="call_alarm">Call</string>
    <string name="notification_set">Notification Settings</string>
    <string name="sms_alarm">Message</string>
    <string name="device_con">Band Connection</string>
    <string name="device_find">Find Band</string>
    <string name="find">find</string>
    <string name="finds">Find</string>
    <string name="kakao_alarm">Kakao talk</string>
    <string name="wechat_alarm">WeChat</string>
    <string name="qq_alarm">QQ</string>
    <string name="led_set">LED color set</string>
    <string name="alarm_onoff">Alarm on/off</string>
    <string name="clock">h&#160;</string>
    <string name="minutes">m&#160;</string>
    <string name="repeat">repeat</string>
    <string name="scanning">Band Searching...</string>
    <string name="none_paired">No paired devices</string>
    <string name="none_found">No devices detected</string>
    <string name="title_paired_Herculess">Paired devices</string>
    <string name="device_title1">Available Band</string>
    <string name="device_title2">Please select your SE Band’s serial number</string>
    <string name="device_title3">Band is connected</string>
    <string name="button_scan">Band Searh</string>
    <string name="bt_title">bluetooth</string>
    <string name="bt_state_init">initializing...</string>
    <string name="bt_state_wait">waiting.. </string>
    <string name="bt_state_connect">connecting...</string>
    <string name="bt_state_connected">connect</string>
    <string name="bt_state_error">error</string>
    <string name="bt_not_enabled_leaving">Bluetooth is turned off. \nPlease activate the bluetooth from Settings on your smartphone.</string>
    <string name="bt_cmd_sending_error">send fail</string>
    <string name="bt_ble_not_supported">This device does not support BLE. \nApp is closing.</string>
    <string name="this_week">This\nweek</string>
    <string name="last_week">Last\nweek</string>
    <string name="this_month">This month</string>
    <string name="last_month">Last month</string>
    <string name="data_over">There will be an additional charge if you use this service with 3G, LTE, LTE-A except Wi-Fi.</string>
    <string name="re_none">Do not show again</string>
    <string name="device">Band</string>
    <string name="firmware_version">Version</string>
    <string name="firmware_update">Update</string>
    <string name="firmware_last_version">Latest version</string>
    <string name="account">Account</string>
    <string name="account_drop">Delete my account</string>
    <string name="account_drop_success">delete my account complete</string>
    <string name="account_user_is_not">User ID doesn’t exist</string>
    <string name="account_pw_not_match">Password is incorrect</string>
    <string name="account_invalid_device_address">Invalid device address</string>
    <string name="account_db_error">database error</string>
    <string name="account_drop_fail">Failed to withdraw the membership</string>
    <string name="same_id">This ID is already in use.</string>
    <string name="unsame_pw">Please check the password again.</string>
    <string name="user_str">I agree to&#160;</string>
</resources>