<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/join_bg_gray"
    android:orientation="vertical"
    android:weightSum="1" >

    <ImageView
        android:layout_width="230dp"
        android:layout_height="102dp"
        android:layout_gravity="center"
        android:layout_marginTop="42dp"
        android:gravity="center_vertical"
        android:src="@drawable/element_tl_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/find_txt"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/find_txt2"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="35dp" />

        <EditText
            android:id="@+id/join_name"
            style="@style/MY.EditText.Style"
            android:layout_width="288dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:nextFocusDown="@+id/join_id" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/join_id"
            style="@style/MY.EditText.Style"
            android:layout_width="288dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:hint="@string/id_hint"
            android:inputType="text"
            android:nextFocusDown="@+id/birth" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/birth"
            android:layout_width="288dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:background="@drawable/element_box_hex_white"
            android:gravity="center_vertical"
            android:hint="@string/birth"
            android:nextFocusDown="@+id/user_tall"
            android:onClick="dateCalendar"
            android:paddingLeft="@dimen/edit_txt_padding_left"
            android:paddingRight="@dimen/edit_txt_padding_left"
            android:textColor="@color/white"
            android:textSize="@dimen/intro_font_size" />
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="88dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/next"
            android:layout_width="95dp"
            android:layout_height="43dp"
            android:background="@drawable/element_button_red"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="7dp" />
        
        <TextView 
            android:id="@+id/find_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/cancel"/>
        
        
    </LinearLayout>

</LinearLayout>